--- a/frontend/app/components/styles/AddQuestion.module.css
+++ b/frontend/app/components/styles/AddQuestion.module.css
@@ -3,7 +3,7 @@
     min-width: 400px;
     background-color: #f7f5ee;
     border-radius: 16px;
-    height: 700px;
+    height: 680px;
     display: inline-block;
     position: relative;
     padding-bottom: .8rem;
@@ -72,7 +72,7 @@
     resize: none;
     height: 520px;
     /* margin-left: 20px; */
-    margin-top: 20px;
+    /* margin-top: 20px; */
     transition-duration: .3s;
     padding-left: 5px;
     padding-top: 5px;
